syntax = "proto3";
package proto;

message PromotionServiceGetAllUsersRQ {
    string offset = 1;
    string limit = 2;
    int64 user = 3;
}
message PromotionServiceGetAllRQ {
    string offset = 1;
    string limit = 2;
}

message PromotionServiceGetAllUsersRS {
    repeated PromotionUserServiceModel result = 1;
    int64 count = 2;
}

message PromotionServiceGetAllRS {
    repeated PromotionUserServiceModel result = 1;
    int64 count = 2;
}

message PromotionUserServiceModel {
    int64 id = 1;
    string title = 2;
    string description = 3;
    string updatedAt = 4;
    string image = 5;
}

message PromotionServiceCreateRQ {
    string title = 1;
    string description = 2;
    int64 user = 3;
    repeated string fileNames = 4;
}

message PromotionServiceRS {
    bool success = 1;
}

service PromotionService {
    rpc GetAll (PromotionServiceGetAllRQ) returns (PromotionServiceGetAllRS);
    rpc LastPromotions (PromotionServiceGetAllRQ) returns (PromotionServiceGetAllRS);
    rpc GetAllUsers (PromotionServiceGetAllUsersRQ) returns (PromotionServiceGetAllUsersRS);
    rpc Create (PromotionServiceCreateRQ) returns (PromotionServiceRS);
}
